feat: 完成生产兼容升级与跨端业务更新
新增会议邀请、图纸收发、临边与质量导出提醒，完善统一权限和责任释放。

同步 Web、小程序 0.1.8、数据库迁移、测试与生产发布回滚工具。